--- a/_includes/themes/home_1_banner.html
+++ b/_includes/themes/home_1_banner.html
@@ -4,7 +4,7 @@
 			============================================== 
 -->
 <div id="theme-main-banner" class="banner-one">
-	<div data-src="images/home/slide-1.jpg">
+	<div data-src="{{ site.url }}/images/slide/coins-currency-investment-insurance-128867.jpeg">
 		<div class="camera_caption">
 			<div class="container">
 				<h3 class="wow fadeInUp animated p-color">Perusahaan Jasa Pemasangan Iklan Radio Suara Surabaya</h3>
@@ -13,7 +13,7 @@
 			</div> <!-- /.container -->
 		</div> <!-- /.camera_caption -->
 	</div>
-	<div data-src="images/home/slide-2.jpg">
+	<div data-src="{{ site.url }}/images/slide/office-notes-notepad-entrepreneur-38556.jpeg">
 		<div class="camera_caption">
 			<div class="container">
 				<h3 class="wow fadeInUp animated p-color">Iklan Radio Adlib, Talk Show, Wawancara</h3>
@@ -24,7 +24,7 @@
 			</div> <!-- /.container -->
 		</div> <!-- /.camera_caption -->
 	</div>
-	<div data-src="images/home/slide-3.jpg">
+	<div data-src="{{ site.url }}/images/slide/pexels-photo-267582.jpeg">
 		<div class="camera_caption">
 			<div class="container">
 				<h3 class="wow fadeInUp animated p-color">Susunan acara Iklan Radio Suara Surabaya</h3>
