--- a/_includes/parts/contact.html
+++ b/_includes/parts/contact.html
@@ -1,3 +1,4 @@
+
 <!-- 
 			=============================================
 				Contact Us
@@ -8,31 +9,39 @@
 		<div class="row">
 			<div class="col-lg-7 col-md-6 col-xs-12">
 				<div class="contact-us-form">
-					<form action="inc/sendemail.php" class="form-validation form-styl-two" autocomplete="off">
+					<form action="{{ site.script_post }}" class="form-validation form-styl-two" autocomplete="off">
 						<div class="row">
+							<div class="col-sm-6"><input type="text" placeholder="Nama*" name="nama"></div>
 							<div class="col-sm-6"><input type="email" placeholder="Email Address*" name="email"></div>
-							<div class="col-sm-6"><input type="text" placeholder="Subject*" name="sub"></div>
+							<div class="col-sm-6"><input type="text" placeholder="Subject*" name="judul"></div>
+							<div class="col-sm-6"><input type="text" placeholder="Nomor Handphone*" name="tel"></div>
 						</div>
-						<textarea placeholder="Your Message" name="message"></textarea>
+						<textarea placeholder="Your Message" name="pesan"></textarea>
 						<input type="submit" class="tran3s theme-button" value="SEnd Message">
 					</form>
 				</div> <!-- /.contact-us-form -->
 			</div> <!-- /.col- -->
 			<div class="col-lg-5 col-md-6 col-xs-12">
 				<div class="contact-address">
-					<h2>Don’t Hesitate to contact with us for any kind of information</h2>
-					<p>Call us for imiditate support this number</p>
-					<a href="#" class="tran3s">880 876 65 455</a>
+					<h2>Kontak Hotline Iklan Radio Suara Surabaya</h2>
+					<p>Telpon kami untuk komunikasi lebih cepat dan konsultasi permasalahan seputar Iklan radio</p>
+					<a href="tel:{{ site.info_whatsapp }}" title='Kontak Iklan Radio' class="tran3s">{{ site.info_whatsapp }}</a>
 					<ul>
-						<li><a href="" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a href="" class="tran3s"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+						<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li><a href="{{ site.sosmed_twitter }}" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="{{ site.sosmed_instagram }}" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					</ul>
 				</div> <!-- /.contact-address -->
 			</div> <!-- /.col- -->
 		</div> <!-- /.row -->
 	</div> <!-- /.conatiner -->
+	
+	<div class="container">
+		<div class='row'>
+			<iframe src="https://maps.google.com/maps?q=Jl. Kencanasari Timur XV/6 Surabaya&amp;output=embed&amp;noscroll=1" height="340" width="100%"></iframe>
+		</div>
+	</div>
+
 
 	<!--Contact Form Validation Markup -->
 	<!-- Contact alert -->
