--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -3,5 +3,8 @@
 		<h3>Kontak dan Informasi</h3>
 		<h5>&#9743; &nbsp; 081331221111</h5>
 		<h5>&#9743; &nbsp; 081 831 0004</h5>
+		<h3>Alamat</h3>
+		<h5>{{ site.info_alamat }}</h5>
+		<iframe src="https://maps.google.com/maps?q=Jl. Kencanasari Timur XV/6 Surabaya&amp;output=embed&amp;noscroll=1" height="340" width="100%"></iframe>
 	</div> <!-- /.sidebar-keyword -->
 </div> <!-- /.blog-sidebar -->
