--- a/_includes/parts/contact.html
+++ b/_includes/parts/contact.html
@@ -25,6 +25,7 @@
 				<div class="contact-address">
 					<h2>Kontak Hotline Iklan Radio Suara Surabaya</h2>
 					<p>Telpon kami untuk komunikasi lebih cepat dan konsultasi permasalahan seputar Iklan radio</p>
+					<p>{{ site.info_alamat }}</p>
 					<a href="tel:{{ site.info_whatsapp }}" title='Kontak Iklan Radio' class="tran3s">{{ site.info_whatsapp }}</a>
 					<ul>
 						<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
