--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,6 +110,7 @@
 		<script type="text/javascript" src="{{site.url}}/vendor/fancybox/dist/jquery.fancybox.min.js"></script>
 		<!-- Theme js -->
 		<script type="text/javascript" src="{{site.url}}/js/theme.js"></script>
+		{% include parts/analytics.html %}
 	</div>
 </body>
 </html>
