--- a/_includes/themes/home_header.html
+++ b/_includes/themes/home_header.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="generator" content="Github.io">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="google-site-verification" content="9XF8PS6yl_dghD9lVbUsBWaGd1xZsfhajDCmtxZ0thE">
 		{% seo %}
 		<link rel="icon" type="image/png" sizes="56x56" href="{{ site.url }}/icon-2.png">
 		<link rel="stylesheet" type="text/css" href="{{ site.url }}/css/style.css">
