--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -5,6 +5,8 @@
 		<h5>&#9743; &nbsp; 081 831 0004</h5>
 		<h3>Alamat</h3>
 		<h5>{{ site.info_alamat }}</h5>
+		{% if site.url == 'https://iklanradiosuarasurabaya.com' %}
 		<iframe src="https://maps.google.com/maps?q=Jl. Kencanasari Timur XV/6 Surabaya&amp;output=embed&amp;noscroll=1" height="340" width="100%"></iframe>
+		{% endif %}
 	</div> <!-- /.sidebar-keyword -->
 </div> <!-- /.blog-sidebar -->
