--- a/_includes/parts/analytics.html
+++ b/_includes/parts/analytics.html
@@ -1,3 +1,4 @@
+{% if site.url == 'https://iklanradiosuarasurabaya.com' %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117121795-1"></script>
 <script>
@@ -9,3 +10,4 @@
 
 	gtag('config', 'UA-117121795-1');
 </script>
+{% endif %}
