--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-md-4 col-sm-6 col-xs-12 blog-sidebar">
 	<div class="sidebar-keyword">
 		<h3>Kontak dan Informasi</h3>
-		<h5>&#9743; &nbsp; 081 234 800 99</h5>
+		<h5>&#9743; &nbsp; 0813 3122 1111</h5>
 		<!-- <h5>&#9743; &nbsp; 081 831 0004</h5> -->
 		<h3>Alamat</h3>
 		<h5>{{ site.info_alamat }}</h5>
