--- a/_includes/themes/home_menu.html
+++ b/_includes/themes/home_menu.html
@@ -9,7 +9,7 @@
 		<div class="top-header clearfix">
 			<p class="float-left"><a href="{{ site.url }}">Jasa Iklan Radio</a></p>
 			<ul class="float-right">
-				<li>Hotline &nbsp; <a href="{{ site.url }}" class="tran3s">081234 800 77</a></li>
+				<li>Hotline &nbsp; <a href="{{ site.url }}" class="tran3s">{{ site.info_whatsapp }}</a></li>
 				<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 				<li><a href="{{ site.sosmed_twitter }}" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 				<li><a href="{{ site.sosmed_instagram }}" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
