--- a/css/responsive.css
+++ b/css/responsive.css
@@ -92,7 +92,7 @@
   footer {padding-top: 60px;}
   .theme-menu-wrapper .top-header p {margin-bottom: 10px;}
   .theme-inner-banner .opacity {padding: 160px 0 100px 0;}
-  .theme-inner-banner .opacity h2 {font-size: 40px;}
+  .theme-inner-banner .opacity h2 {font-size: 35px; padding-top: 60px;}
   .project-v1 .wrapper,.shop-page.full-width {padding: 0 15px;}
   .project-details .title h2 {line-height: 50px;font-size: 30px;}
   .product-details .product-info {margin-top: 40px;}
