--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,8 +66,8 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-7 col-xs-12 text-right pull-right">
 								<ul class="footer-menu">
-									<li><a href="https://bacacepat.com" class="tran3s">Baca Cepat</a></li>
-									<li><a href="https://iklanradio.com" class="tran3s">Iklan Radio</a></li>
+									<li><a href="https://bacacepat.com" class="tran3s" title="Baca Buku Cepat">Baca Cepat</a></li>
+									<li><a href="https://iklanradio.com" class="tran3s" title="Pasang Iklan Radio">Pasang Iklan Radio</a></li>
 								</ul>
 								<ul class="social-icon">
 									<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -77,7 +77,7 @@
 							</div>
 							<div class="col-lg-6 col-md-5 col-xs-12 footer-logo">
 								<div class="logo">
-									<a href="{{ site.url }}">Iklan Radio Suara Surabaya</a>
+									<a href="{{ site.url }}" title="Pasang Iklan Radio Suara Surabaya">Pasang Iklan Radio Suara Surabaya</a>
 								</div>
 								<p>All Right Reserved 2018 &copy; <strong><a href="https://www.surabaya-ad.com/">Surabaya Ad</a></strong></p>
 							</div>
