--- a/_includes/themes/home_1_banner.html
+++ b/_includes/themes/home_1_banner.html
@@ -16,7 +16,7 @@
 	<div data-src="{{ site.url }}/images/slide/office-notes-notepad-entrepreneur-38556.jpeg">
 		<div class="camera_caption">
 			<div class="container">
-				<h3 class="wow fadeInUp animated p-color">Iklan Radio Adlib, Talk Show, Wawancara</h3>
+				<h3 class="wow fadeInUp animated p-color">Pasang Iklan Radio Adlib, Talk Show, Wawancara</h3>
 				<h1 class="wow fadeInUp animated" data-wow-delay="0.6s">Dapatkan 
 					<span class="p-color">Harga Terbaru</span> 
 					<br>Iklan Radio Suara Surabaya</h1>
