--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,6 +68,7 @@
 								<ul class="footer-menu">
 									<li><a href="https://bacacepat.com" class="tran3s" title="Baca Buku Cepat">Baca Cepat</a></li>
 									<li><a href="https://iklanradio.com" class="tran3s" title="Pasang Iklan Radio">Pasang Iklan Radio</a></li>
+									<li><a href="http://iklangoogle.id" class="tran3s" title="Pasang Iklan Google">Pasang Iklan Google</a></li>
 								</ul>
 								<ul class="social-icon">
 									<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
