--- a/_includes/parts/contact.html
+++ b/_includes/parts/contact.html
@@ -12,11 +12,12 @@
 					<form action="{{ site.script_post }}" class="form-validation form-styl-two" autocomplete="off">
 						<div class="row">
 							<div class="col-sm-6"><input type="text" placeholder="Nama*" name="nama"></div>
-							<div class="col-sm-6"><input type="email" placeholder="Email Address*" name="email"></div>
+							<div class="col-sm-6"><input type="email" placeholder="Email Address*" name="emailaddress"></div>
 							<div class="col-sm-6"><input type="text" placeholder="Subject*" name="judul"></div>
-							<div class="col-sm-6"><input type="text" placeholder="Nomor Handphone*" name="tel"></div>
+							<div class="col-sm-6"><input type="text" placeholder="Nomor Handphone*" name="phonumber"></div>
 						</div>
 						<textarea placeholder="Your Message" name="pesan"></textarea>
+						<input type="hidden" name="sumber" value="IklanRadioSuaraSurabaya" />
 						<input type="submit" class="tran3s theme-button" value="SEnd Message">
 					</form>
 				</div> <!-- /.contact-us-form -->
