--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -2,6 +2,7 @@
 	<div class="sidebar-keyword">
 		<h3>Kontak dan Informasi</h3>
 		<h5>&#9743; &nbsp; {{ site.info_whatsapp }}</h5>
+		<h5>&#9743; &nbsp; {{ site.info_tel1 }}</h5>
 		<!-- <h5>&#9743; &nbsp; 081 831 0004</h5> -->
 		<h3>Alamat</h3>
 		<h5>{{ site.info_alamat }}</h5>
