--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,8 @@
  body {
   font-family: 'Poppins', sans-serif;
   font-weight: normal;
-  color:#969696;
+  /*color:#969696;*/
+  color:#000;
   font-size: 16px;
  }
  body .main-page-wrapper {
@@ -801,11 +802,11 @@ footer .bottom-footer [class*="col-"] {margin-bottom: 50px;}
 .client-section-two .item h6,.client-section-two .item span {color: #fff;line-height: 30px;}
 /*--------------------- Theme Inner Banner ---------------*/
 .theme-inner-banner {
-  background: url(../images/inner-page/banner.jpg) no-repeat center;
+  background: url(../images/inner-page/iklan-radio-suara-surabaya-banner-april-2018.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
   text-align: center;
-  margin-bottom: 170px;
+  margin-bottom: 50px;
 }
 .theme-inner-banner .opacity {
   background: rgba(0,0,0,0.6);
@@ -951,7 +952,8 @@ footer .bottom-footer [class*="col-"] {margin-bottom: 50px;}
 .blog-sidebar h3 {
   font-weight: 600;
   font-size: 28px;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
+		margin-top: 10px;
 }
 .blog-sidebar .sidebar-categories ul li a {
   font-size: 18px;
@@ -1617,4 +1619,7 @@ footer .bottom-footer [class*="col-"] {margin-bottom: 50px;}
   background: transparent;
   font-size: 20px;
   color: #a3a3a3;
+}
+.text ul{
+	list-style-type: circle;
 }
