--- a/_includes/themes/home_menu.html
+++ b/_includes/themes/home_menu.html
@@ -55,7 +55,7 @@
 							</ul>
 						</li>
 						<li class="dropdown-holder {% if page.this_page == 'paket-iklan' %}active{% endif %}">
-							<a href="{{ site.url }}/" title='Paket Iklan Radio Suara Surabaya' class="tran3s">Paket Iklan</a>
+							<a href="#" title='Paket Iklan Radio Suara Surabaya' class="tran3s">Paket Iklan</a>
 							<ul class="sub-menu">
 								{% for e in site.paket_iklan %}
 								<li>
