--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -29,5 +29,7 @@
 			{% endfor %}
 		</ul>
 		{% endif %}
+		<h3>Facebook Iklan Radio Suara Surabaya</h3>
+		<div class="fb-page"></div>
 	</div> <!-- /.sidebar-keyword -->
 </div> <!-- /.blog-sidebar -->
