--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -29,7 +29,7 @@
 			{% endfor %}
 		</ul>
 		{% endif %}
-		<h3>Facebook Iklan Radio Suara Surabaya</h3>
-		<div class="fb-page"></div>
+		<h3>Facebook Agen Iklan Radio Suara Surabaya</h3>
+		<div class="fb-page" data-href="https://www.facebook.com/Pasang-Iklan-Radio-Suara-Surabaya-149523209213232/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Pasang-Iklan-Radio-Suara-Surabaya-149523209213232/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pasang-Iklan-Radio-Suara-Surabaya-149523209213232/">Pasang Iklan Radio Suara Surabaya</a></blockquote></div>
 	</div> <!-- /.sidebar-keyword -->
 </div> <!-- /.blog-sidebar -->
