--- a/_includes/parts/sidebar.html
+++ b/_includes/parts/sidebar.html
@@ -1,7 +1,8 @@
 <div class="col-md-4 col-sm-6 col-xs-12 blog-sidebar">
 	<div class="sidebar-keyword">
 		<h3>Kontak dan Informasi</h3>
-		<h5>&#9743; &nbsp; {{ site.info_whatsapp }}</h5>
+                <h5>&#9743; &nbsp; <a href="https://api.whatsapp.com/send?phone={{ site.info_whatsapp }}">{{ site.info_whatsapp }}</a></h5>
+                <h5>&#9743; &nbsp; <a href="https://api.whatsapp.com/send?phone={{ site.info_whatsapp2 }}">{{ site.info_whatsapp2 }}</a></h5>
 		<h5>&#9743; &nbsp; {{ site.info_tel1 }}</h5>
 		<!-- <h5>&#9743; &nbsp; 081 831 0004</h5> -->
 		<h3>Alamat</h3>
