--- a/_includes/themes/home_menu.html
+++ b/_includes/themes/home_menu.html
@@ -11,7 +11,7 @@
 			<ul class="float-right">
 				<li>Hotline &nbsp; 
                                     <a href="https://api.whatsapp.com/send?phone={{site.info_whatsapp}}" class="tran3s">{{ site.info_whatsapp }}</a>
-                                    <a href="https://api.whatsapp.com/send?phone={{site.info_whatsapp2}}" class="tran3s">{{ site.info_whatsapp2 }}</a>
+                                    <!-- <a href="https://api.whatsapp.com/send?phone={{site.info_whatsapp2}}" class="tran3s">{{ site.info_whatsapp2 }}</a> -->
                                 </li>
 				<li><a href="{{ site.sosmed_facebook }}" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 				<li><a href="{{ site.sosmed_twitter }}" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
